<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoL Craft</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_report_bug">Report bug</string>
    <string name="action_stat_summary">Stat summary</string>
    <string name="action_view_as_list">View as list</string>
    <string name="action_view_as_grid">View as grid</string>
    
    <string name="champion_portrait">Champion portrait</string>
    <string name="item_thumb">Item thumbnail</string>
    
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="enter">Enter</string>
    
    <string name="all_items">All Items</string>
    <string name="consumables">Consumables</string>
    <string name="defense">Defense</string>
    <string name="health">Health</string>
    <string name="armor">Armor</string>
    <string name="magic_resist">Magic Resist</string>
    <string name="tenacity">Tenacity</string>
    <string name="attack">Attack</string>
    <string name="damage">Damage</string>
    <string name="critical_strike">Critical Strike</string>
    
    <string name="stats">Stats</string>
    <string name="stat_hp">HP</string>
    <string name="stat_hp_regen">HP Regen</string>
    <string name="stat_mp">MP</string>
    <string name="stat_mp_regen">MP Regen</string>
    <string name="stat_ms">MS</string>
    <string name="stat_range">Range</string>
    <string name="stat_ad">AD</string>
    <string name="stat_mr">MR</string>
    <string name="stat_as">AS</string>	
    <string name="stat_ar">AR</string>
    <string name="stat_ap">AP</string>	
    <string name="stat_level">Level</string>
    
    <string name="stat_energy">ENERGY</string>
    <string name="stat_energy_regen">ENERGY REGEN</string>
    <string name="stat_bloodwell">BLOODWELL</string>
    <string name="stat_unknown">UNKNOWN</string>
    
    <string name="add_item">Add Item</string>	
    <string name="item_build">Item Build</string>
    <string name="runes">Runes</string>
    
    <string name="add_runes">Add Runes</string>
    
    <string name="primary_role">PRIMARY ROLE</string>
    <string name="secondary_role">SECONDARY ROLE</string>
    <string name="overall_stat_atk">ATK</string>
    <string name="overall_stat_def">DEF</string>
    <string name="overall_stat_ap">AP</string>
    <string name="overall_stat_diff">DIFF</string>
    
    
    <string name="send_feedback">Send Feedback</string>
    <string name="subject">Subject</string>
    <string name="body">Enter feedback here&#8230;</string>
    <string name="send">Send</string>
    
    <string name="preference_file_key">prefs</string>
    
    <string name="build_saved">Build saved</string>
    
    <string name="stat_summary">Stat summary</string>
    <string name="analyze_build">Analyze Build</string>

    <string name="analysis_summary">Analysis Summary</string>
    <string name="dps_analysis">Dps Analysis</string>
    <string name="dps">Dps</string>
    <string name="range">Range</string>
    <string name="attack_speed">Attack Speed</string>
    <string name="attack_damage">Attack Damage</string>
    <string name="more_info">More Info</string>
    <string name="burst_analysis">Burst Analysis</string>
    <string name="total_burst_damage">Total Burst Damage</string>
    <string name="overall">Overall</string>
    <string name="type">Type</string>
    <string name="tank_analysis">Tank Analysis</string>
    <string name="physical_effective_health">Physical effective health</string>
    <string name="magical_effective_health">Magical effective health</string>
    <string name="mobility_analysis">Mobility Analysis</string>
    
    <string name="stat_desc_null">null</string>
    <string name="stat_desc_hp">health</string>
    <string name="stat_desc_hpr">health regeneration</string>
    <string name="stat_desc_mp">mana</string>
    <string name="stat_desc_mpr">mana regeneration</string>
    <string name="stat_desc_ad">attack damage</string>
    <string name="stat_desc_asp">percent attack speed</string>
    <string name="stat_desc_ar">armor</string>
    <string name="stat_desc_mr">magic resistance</string>
    <string name="stat_desc_range">range</string>
    <string name="skill_stat_level_minus_one">level - 1</string>
    
    <string name="knockup">Knockup</string>
    <string name="slow">Slow (%1$d%%)</string>
    <string name="charm">Charm</string>
    <string name="stun">Stun</string>
    <string name="aoe_stun">AoE Stun</string>
    <string name="blink">Blink</string>
    <string name="dash">Dash</string>
    <string name="speed_up_flat">Speed up (flat)</string>
    <string name="speed_up_percent">Speed up (%)</string>
    <string name="question_mark">\?</string>
    
    <string name="release_notes"><![CDATA[
    Thank you for beta testing LoL Craft, the League of Legend build crafter tool.
    Since the app is still in beta, there may be various bugs or inaccurate data 
    scattered throughout the app. If you find any bugs please report them using the
    report bug feature found in the menus throughout the app.
    ]]></string>
    
    <string name="life_steal">Life Steal</string>
    
    <string name="magic">Magic</string>
    
    <string name="ability_power">Ability Power</string>
    
    <string name="cooldown_reduction">Cooldown Reduction</string>
    
    <string name="mana">Mana</string>
    
    <string name="mana_regen">Mana Regen</string>
    
    <string name="spell_vamp">Spell Vamp</string>
    
    <string name="movement">Movement</string>
    
    <string name="boots">Boots</string>
    
    <string name="misc_movement">Misc. Movement</string>
    
    <string name="clear">Clear</string>
    
    <string name="are_you_sure">Are you sure?</string>
    
    <string name="clear_item_build_disclaimer">This will clear all items in this build. This operation cannot be undone.</string>
    
    <string name="clear_rune_build_disclaimer">This will clear all runes in this build. This operation cannot be undone.</string>
    <string name="stat_desc_damage_reduction">damage reduction</string>
    <string name="aoe_knockup">AoE Knockup</string>
    <string name="aoe_slow">AoE Slow (%1$d%%)</string>
    <string name="wall">Wall</string>
    <string name="silence">Silence</string>
    <string name="aoe_silence">AoE Silence</string>
    <string name="root">Root</string>
    <string name="aoe_root">AoE Root</string>
    <string name="pull">Pull</string>
    <string name="aoe_pull">AoE Pull</string>
    <string name="displace">Displace</string>
    <string name="aoe_displace">AoE Displace</string>
    <string name="cc_analysis">CC Analysis</string>
    <string name="fear">Fear</string>
    <string name="aoe_fear">AoE Fear</string>
    <string name="paranoia">Paranoia</string>
    <string name="skill_stat_ap">AP</string>
    <string name="skill_stat_ad">AD</string>
    <string name="skill_stat_bonus_ad">bonus AD</string>
    <string name="skill_stat_cd_mod">(affected by cooldown reduction)</string>
    <string name="skill_stat_stacks">stacks</string>
    <string name="skill_stat_null">null</string>
    <string name="skill_stat_one"></string>
    <string name="taunt">Taunt</string>
    <string name="aoe_taunt">AoE Taunt</string>
    <string name="action_invalidate_splash">Invalidate splash</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_save_as">Save as...</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="save_as">Save as...</string>
    <string name="name">Name</string>
    <string name="confirm_build_overwrite">A build with the name &quot;%1$s&quot; already exists. Would you like to overwrite it?\n\nWarning: This operation is not reversable.</string>
    <string name="invalid_build_name">Invalid build name</string>
    <string name="global_teleport">Global teleport</string>
    <string name="build_manager">Build Manager</string>
    <string name="suppress">Suppress</string>
    <string name="blind">Blind</string>
    <string name="champion_splash">Champion splash</string>
    <string name="action_about">About</string>
    <string name="about">About</string>

    <string name="about_text"><![CDATA[
<b>LoL Craft</b> <small>by Gary Guo</small>
<br>
<b>Version %1$s</b>
<br><br>
%2$s
]]></string>
    <string name="stat_desc_enemy_max_hp">enemy\'s max HP</string>
    <string name="stat_desc_level_minus_one">level - 1</string>
    <string name="skill_stat_enemy_max_hp">enemy\'s max hp</string>
    <string name="skill_stat_bonus_hp">bonus HP</string>
    <string name="skill_stat_total_ar">armor</string>
    <string name="stat_desc_total_mp">total mana</string>
    <string name="stat_desc_ms">movement speed</string>
    <string name="skill_stat_total_mp">MP</string>
    <string name="reveal_all_champions">Reveal All Champions</string>
    <string name="stealth">Stealth</string>
    <string name="stat_desc_aa_magic_damage">bonus magic damage on basic attack</string>
    <string name="special_value">\?</string>
    <string name="base_value">base value</string>
    <string name="level_dependent_base_damage">base damage is champion level dependent</string>
    <string name="item_cost_format_string">Total %1$dg (Base %2$dg)</string>
    <string name="action_show_info">Item info</string>
    <string name="stacks">stacks</string>
    <string name="stat_desc_aa_true_damage">bonus true damage on basic attack</string>
    <string name="cooldown">cooldown</string>
    <string name="stat_desc_cc_red">crowd control duration reduction</string>
    <string name="stat_desc_aoe_dps_magic">AoE magical damage per second</string>
    <string name="skill_stat_total_hp">HP</string>
    <string name="changelog">What\'s new</string>
    <string name="changelog_text"><![CDATA[
<b>0.2.14</b>
<br>
<small>
[+] Added the "Get build" feature
<br>
[!] Updated data to match LoL version 5.15
<br>
[!] Fixed more bugs/crashes
<br>
</small>
]]></string>
    <string name="key_show_changelog">show_changelog</string>
    <string name="pref_show_changelog">Show \"What\'s new\" dialog</string>
    <string name="pref_sum_show_changelog">Show \"What\'s new\" dialog at the first launch of the application after every update</string>
    <string name="settings">Settings</string>
    <string name="useful_links">Useful links</string>
    <string name="useful_links_help">These links contain useful information about the champion and regarding crafting a build for the champion. Although in the future, some of the information found on these sites will be incorporated into LoLCraft, for the time being, it is simply easier to link to these sites for now.</string>
    <string name="stat_desc_untargetable">champion is untargetable</string>
    <string name="no_analysis">No analysis info</string>
    <string name="no_analysis_explaination">Sorry, but there is currently no analysis information available for this champion. Please wait for analysis information to be added in a future release.</string>
    <string name="stat_desc_undying">champion cannot die</string>
    <string name="seconds">seconds</string>
    <string name="dev_menu">Dev menu</string>
    <string name="do_stat_analysis">Do stat analysis</string>
    <string name="skill_stat_bonus_ar">bonus armor</string>
    <string name="skill_stat_bonus_mr">bonus magic resistance</string>
    <string name="stat_desc_cc_immune">champion is immune to crowd control effects</string>
    <string name="stat_desc_crit">critical strike chance</string>
    <string name="stat_desc_percent_attack_as_magical">percent attack damage as magic damage</string>
    <string name="message_error_retrieving_build">Error retrieving build</string>
    <string name="action_get_build">Get build</string>


</resources>
