<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_load"
        app:showAsAction="ifRoom"
        android:title="@string/action_load"/>
    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="90"
        app:showAsAction="never"
        android:title="@string/action_save_as"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_feedback"/>
    <item
        android:id="@+id/action_stat_summary"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_stat_summary"/>
    <item
        android:id="@+id/action_get_build"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_get_build"/>
    <item
        android:id="@+id/action_invalidate_splash"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_invalidate_splash"/>

</menu>