<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkdarkgrey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_action_search" />

        <EditText
            android:id="@+id/searchField"
            style="@style/ItemPickerEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:id="@+id/filterPane"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnClearFilter"
                    style="@style/ItemPickerButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="left|center_vertical"
                    android:text="@string/all_items" />

                <CheckBox
                    android:id="@+id/btnConsumables"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black_almost"
                    android:minHeight="48dp"
                    android:text="@string/consumables" />

                <TextView
                    style="@style/ItemPickerTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/defense" />

                <CheckBox
                    android:id="@+id/cbHp"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/health" />

                <CheckBox
                    android:id="@+id/cbAr"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/armor" />

                <CheckBox
                    android:id="@+id/cbMr"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/magic_resist" />

                <CheckBox
                    android:id="@+id/cbTenacity"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tenacity" />

                <TextView
                    style="@style/ItemPickerTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/attack" />

                <CheckBox
                    android:id="@+id/cbAd"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/damage" />

                <CheckBox
                    android:id="@+id/cbCrit"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/critical_strike" />

                <CheckBox
                    android:id="@+id/cbAs"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/attack_speed" />

                <CheckBox
                    android:id="@+id/cbLs"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/life_steal" />

                <TextView
                    style="@style/ItemPickerTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/magic" />

                <CheckBox
                    android:id="@+id/cbAp"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ability_power" />

                <CheckBox
                    android:id="@+id/cbCdr"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cooldown_reduction" />

                <CheckBox
                    android:id="@+id/cbSpellVamp"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spell_vamp" />

                <CheckBox
                    android:id="@+id/cbMana"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mana" />

                <CheckBox
                    android:id="@+id/cbManaRegen"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mana_regen" />

                <TextView
                    style="@style/ItemPickerTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/movement" />

                <CheckBox
                    android:id="@+id/cbBoots"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/boots" />

                <CheckBox
                    android:id="@+id/cbOtherMovement"
                    style="@style/ItemPickerCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/misc_movement" />
            </LinearLayout>
        </ScrollView>

        <GridView
            android:id="@+id/itemGrid"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white97"
            android:columnWidth="50dp"
            android:numColumns="auto_fit"
            android:paddingLeft="5dp" >
        </GridView>
    </LinearLayout>

</LinearLayout>