<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ggstudios.lolcraft.MainActivity" >

    <item
        android:id="@+id/action_report_bug"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_report_bug"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="150"
        app:showAsAction="never"
        android:title="@string/settings"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_about"/>

    <item
        android:id="@+id/action_dev_menu"
        android:orderInCategory="250"
        app:showAsAction="never"
        android:title="@string/dev_menu"/>

</menu>