<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_view_as_list"
        android:icon="@drawable/ic_action_view_as_list"
        android:showAsAction="ifRoom"
        android:title="@string/action_view_as_list"/>
    <item
        android:id="@+id/action_view_as_grid"
        android:icon="@drawable/ic_action_view_as_grid"
        android:showAsAction="ifRoom"
        android:title="@string/action_view_as_grid"/>

</menu>