<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/skill_item_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dps_analysis"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/lblDps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/dps"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent" >

                    <ProgressBar
                        android:id="@+id/pbarDps"
                        style="@style/ThemedProgessBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:max="1000" />

                    <TextView
                        android:id="@+id/txtDps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="6dp"
                        android:text="@string/dps"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="12sp" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/lblRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/range"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent" >

                    <ProgressBar
                        android:id="@+id/pbarRange"
                        style="@style/ThemedProgessBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:max="710" />

                    <TextView
                        android:id="@+id/txtRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="6dp"
                        android:text="@string/dps"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="12sp" />
                </FrameLayout>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblAttackSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/attack_speed"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txtAttackSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="2.5"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblAttackDamage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/attack_damage"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txtAttackDamage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginTop="5dp" 
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</FrameLayout>