<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/skill_item_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/burst_analysis"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <com.ggstudios.views.AmazingPieChart
                    android:id="@+id/pie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnOverall"
                        style="@style/LabelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/overall"
                        android:textSize="13sp"
                        android:minWidth="48dp"
                        android:minHeight="48dp" />

                    <Button
                        android:id="@+id/btnType"
                        style="@style/LabelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="13sp"
                        android:minWidth="48dp"
                        android:minHeight="48dp" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/pieLegend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/lblTotalDamage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_burst_damage"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:id="@+id/txtTotalDamage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_burst_damage"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>